# coffee-review-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  config.py  log.py  loggingconfig.json  main.py  pyproject.toml  requirements-dev.backup  requirements.txt  setup.py  tree.txt
coffee/: __init__.py  async_parser.py  async_review_scraper.py  async_url_scraper.py  config.py  fetch.py  parser.py  review_scraper.py  utils.py
coffee/test_html/: review_espresso_blend_29.html  review_ethiopia_sidama_orange_blossom_washed_g1.html  review_ethiopia_washed_guji_uraga_tome_variety_74110.html  review_ethiopia_washed_sidama_bensa_single_variety_74158.html  review_guatemala_bella_carmona_5.html  review_wilton_benitez_sidra_2.html
coffee_review/test_html/: review_burundi_kayanza_cima_yeast_natural.html  review_ethiopia_guji_floral_blueberry_natural_g1.html  review_ethiopia_sidama_berry_gummies_74158_natural_g1.html  review_putra_gayo_sumatra_2.html
data/: reviews.json
data/raw/: 07072024_review_urls.pkl  07072024_reviews.csv  07072024_reviews.json  09072024_reviews.csv  09072024_reviews.json
docs/: tree.txt
notebooks/: 01-data-cleaning.ipynb  02-data-EDA.ipynb  03-text-features.ipynb  1-data-cleaning.ipynb  1_data_cleaning.ipynb  2-data-EDA.ipynb  2_data_EDA.ipynb  2_feature_engineering.ipynb  2_geographic_cleaning.ipynb  2_text_features.ipynb
notes/: HDBSCAN
scraper/: async_review_scraper.py
scraper/archive/: async_scrape_roast_urls.py  scraper.py
scraper/test_html/: review_ethiopia_guji_floral_blueberry_natural_g1.html  review_ethiopia_washed_sidama_bensa_single_variety_74158.html
scripts/: json_to_csv.py  openex.py  resolve_roasters.py  run_scraper.py  scrape_reviews.py  test.py
scripts/archive/: json_to_csv.py
src/: async_parser.py  async_review_parser.py  async_review_scraper.py  async_url_scraper.py  config.py  log.py  review_parser.py  scraper.py  utils.py
src/archive/: async_scrape_roast_reviews.py  async_scrape_roast_urls.py  htmlparser.py  scraper.py
src/test_html/: review_burundi_kayanza_cima_yeast_natural.html  review_espresso_blend_29.html  review_ethiopia_sidama_berry_gummies_74158_natural_g1.html  review_ethiopia_sidama_orange_blossom_washed_g1.html  review_ethiopia_washed_guji_uraga_tome_variety_74110.html  review_guatemala_bella_carmona_5.html  review_putra_gayo_sumatra_2.html  review_wilton_benitez_sidra_2.html
