[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coffee"
version = "1.0.0"
description = "Project for web scraping and analysis of data from Coffeereview.com"
readme = "README.md"
requires-python = ">= 3.12"
authors = [{ name = "Tyler Nardone", email = "tynardone@gmail.com" }]
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/tynardone/coffee-review-analysis"

[tool.mypy]
disable_error_code = "import-untyped"
exclude = "venv/"
ignore_missing_imports = true


[tool.ruff]
lint.select = [
    "I", # isort
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "B", # flake8-bugbear
    "N", # pep8-naming
]
line-length = 88
lint.ignore = ["E402"]
