[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coffee"
version = "1.0.0"
description = "Project for web scraping and analysis of data from Coffeereview.com"
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [{ name = "Tyler Nardone", email = "tynardone@gmail.com" }]
license = { file = "LICENSE" }
dependencies = [
    "aiohttp>=3.10",
    "beautifulsoup4>=4.12",
    "numpy>=2.0",
    "pandas>=2.2",
    "pycountry>=24.6",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "tqdm>=4.67",
    "unidecode>=1.3",
]

[project.urls]
Repository = "https://github.com/tynardone/coffee-review-analysis"

# PEP 735 dependency groups, managed by uv.
# `analysis` holds the notebook / modelling stack; `dev` holds tooling.
# Both are installed by default via [tool.uv] default-groups below.
[dependency-groups]
analysis = [
    "ipykernel>=6.29",
    "jupyterlab>=4.0",
    "matplotlib>=3.9",
    "nltk>=3.8",
    # numba/llvmlite are pulled in transitively by umap-learn; pin a modern
    # floor so the resolver doesn't fall back to versions that lack 3.12 wheels.
    "numba>=0.61",
    "plotly>=5.23",
    "scikit-learn>=1.5",
    "scipy>=1.14",
    "seaborn>=0.13",
    "spacy>=3.7",
    "umap-learn>=0.5",
    "wordcloud>=1.9",
]
dev = [
    "mypy>=1.8",
    "pre-commit>=3.5",
    "ruff>=0.7",
]

[tool.uv]
default-groups = ["dev", "analysis"]

[tool.setuptools]
# Flat layout: only the `coffee` package is importable; scripts/ and
# notebooks/ are not part of the distribution.
packages = ["coffee"]

[tool.mypy]
disable_error_code = "import-untyped"
exclude = "venv/"
ignore_missing_imports = true


[tool.ruff]
lint.select = [
    "I", # isort
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "B", # flake8-bugbear
    "N", # pep8-naming
]
line-length = 88
lint.ignore = ["E402"]
